--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,12 @@
         "php": "^8.2",
         "illuminate/bus": "^11.0|^12.0",
         "illuminate/contracts": "^11.0|^12.0",
-        "illuminate/console": "^11.0|^12.0",
-        "illuminate/database": "^11.0|^12.0",
-        "illuminate/filesystem": "^11.0|^12.0",
-        "illuminate/http": "^11.0|^12.0",
-        "illuminate/queue": "^11.0|^12.0",
-        "illuminate/support": "^11.0|^12.0",
+        "illuminate/console": "^11.0",
+        "illuminate/database": "^11.0",
+        "illuminate/filesystem": "^11.0",
+        "illuminate/http": "^11.0",
+        "illuminate/queue": "^11.0",
+        "illuminate/support": "^11.0",
         "spatie/laravel-package-tools": "^1.16"
     },
     "require-dev": {
