--- a/composer.json
+++ b/composer.json
@@ -22,19 +22,19 @@
         "php": "^8.2",
         "illuminate/bus": "^11.0|^12.0",
         "illuminate/contracts": "^11.0|^12.0",
-        "illuminate/console": "^11.0",
-        "illuminate/database": "^11.0",
-        "illuminate/filesystem": "^11.0",
-        "illuminate/http": "^11.0",
-        "illuminate/queue": "^11.0",
-        "illuminate/support": "^11.0",
+        "illuminate/console": "^11.0|^12.0",
+        "illuminate/database": "^11.0|^12.0",
+        "illuminate/filesystem": "^11.0|^12.0",
+        "illuminate/http": "^11.0|^12.0",
+        "illuminate/queue": "^11.0|^12.0",
+        "illuminate/support": "^11.0|^12.0",
         "spatie/laravel-package-tools": "^1.16"
     },
     "require-dev": {
         "larastan/larastan": "^2.9",
         "laravel/pint": "^1.14",
         "nunomaduro/collision": "^8.1.1",
-        "orchestra/testbench": "^9.0.0",
+        "orchestra/testbench": "^9.0.0|^10.0",
         "pestphp/pest": "^3.5",
         "pestphp/pest-plugin-arch": "^3.0",
         "pestphp/pest-plugin-laravel": "^3.0",
